@@ -264,7 +264,7 @@ strap-0/VECTCAT.$(FASLEXT): strap-0/A1AGG.$(FASLEXT) \
 	strap-0/ABELMON.$(FASLEXT) strap-0/RING.$(FASLEXT) \
 	strap-0/MONOID.$(FASLEXT) strap-0/ABELGRP.$(FASLEXT)
 
-strap-0/ARR2CAT.$(FASLEXT): strap-0/FINAGG.$(FASLEXT)
+strap-0/ARR2CAT.$(FASLEXT): strap-0/FINAGG.$(FASLEXT) strap-0/SMAGG.$(FASLEXT)
 
 strap-0/MATCAT.$(FASLEXT): strap-0/ARR2CAT.$(FASLEXT) \
 	strap-0/EUCDOM.$(FASLEXT) strap-0/INTDOM.$(FASLEXT) \
@@ -296,15 +296,16 @@ strap-0/TBAGG.$(FASLEXT): strap-0/KDAGG.$(FASLEXT) strap-0/FINAGG.$(FASLEXT)
 strap-0/KDAGG.$(FASLEXT): strap-0/DIAGG.$(FASLEXT) strap-0/IXAGG.$(FASLEXT)
 strap-0/DIAGG.$(FASLEXT): strap-0/DIOPS.$(FASLEXT)
 strap-0/DIOPS.$(FASLEXT): strap-0/BGAGG.$(FASLEXT)
-strap-0/BGAGG.$(FASLEXT): strap-0/HOAGG.$(FASLEXT)
+strap-0/BGAGG.$(FASLEXT): strap-0/SMAGG.$(FASLEXT) 
+strap-0/SMAGG.$(FASLEXT): strap-0/HOAGG.$(FASLEXT)
 strap-0/LSAGG.$(FASLEXT): strap-0/STAGG.$(FASLEXT) \
 	strap-0/FLAGG.$(FASLEXT) strap-0/ELAGG.$(FASLEXT)
 strap-0/STAGG.$(FASLEXT): strap-0/URAGG.$(FASLEXT)
 strap-0/URAGG.$(FASLEXT): strap-0/RCAGG.$(FASLEXT)
 strap-0/RCAGG.$(FASLEXT): strap-0/HOAGG.$(FASLEXT)
-strap-0/ELAGG.$(FASLEXT): strap-0/LNAGG.$(FASLEXT)
+strap-0/ELAGG.$(FASLEXT): strap-0/LNAGG.$(FASLEXT) strap-0/SMAGG.$(FASLEXT)
 strap-0/SRAGG.$(FASLEXT): strap-0/A1AGG.$(FASLEXT)
-strap-0/A1AGG.$(FASLEXT): strap-0/FLAGG.$(FASLEXT)
+strap-0/A1AGG.$(FASLEXT): strap-0/FLAGG.$(FASLEXT) strap-0/SMAGG.$(FASLEXT)
 strap-0/FLAGG.$(FASLEXT): strap-0/LNAGG.$(FASLEXT) strap-0/FINAGG.$(FASLEXT)
 strap-0/FINAGG.$(FASLEXT): strap-0/HOAGG.$(FASLEXT)
 strap-0/LNAGG.$(FASLEXT): strap-0/IXAGG.$(FASLEXT) \
@@ -605,7 +606,7 @@ strap-1/QFCAT.$(FASLEXT): strap-1/FIELD.$(FASLEXT) \
 strap-1/OPERCAT.$(FASLEXT): strap-1/SETCAT.$(FASLEXT) \
 	strap-0/OUTFORM.$(FASLEXT) strap-0/BOOLEAN.$(FASLEXT)
 
-strap-1/ARR2CAT.$(FASLEXT): strap-1/FINAGG.$(FASLEXT)
+strap-1/ARR2CAT.$(FASLEXT): strap-1/FINAGG.$(FASLEXT) strap-1/SMAGG.$(FASLEXT)
 
 strap-1/BTAGG.$(FASLEXT): strap-1/ORDSET.$(FASLEXT) \
 	strap-1/BOOLE.$(FASLEXT) strap-1/LOGIC.$(FASLEXT) \
@@ -624,11 +625,11 @@ strap-1/URAGG.$(FASLEXT): strap-1/RCAGG.$(FASLEXT) \
 
 strap-1/RCAGG.$(FASLEXT): strap-1/HOAGG.$(FASLEXT)
 
-strap-1/ELAGG.$(FASLEXT): strap-1/LNAGG.$(FASLEXT)
+strap-1/ELAGG.$(FASLEXT): strap-1/LNAGG.$(FASLEXT) strap-1/SMAGG.$(FASLEXT)
 
 strap-1/SRAGG.$(FASLEXT): strap-1/A1AGG.$(FASLEXT)
 
-strap-1/A1AGG.$(FASLEXT): strap-1/FLAGG.$(FASLEXT)
+strap-1/A1AGG.$(FASLEXT): strap-1/FLAGG.$(FASLEXT) strap-1/SMAGG.$(FASLEXT)
 
 strap-1/FLAGG.$(FASLEXT): strap-1/LNAGG.$(FASLEXT) strap-1/FINAGG.$(FASLEXT)
 
@@ -986,7 +987,7 @@ strap-2/UPOLYC.$(FASLEXT): strap-2/POLYCAT.$(FASLEXT) \
 	strap-2/FIELD.$(FASLEXT) strap-2/ALGEBRA.$(FASLEXT)
 
 
-strap-2/ARR2CAT.$(FASLEXT): strap-2/FINAGG.$(FASLEXT)
+strap-2/ARR2CAT.$(FASLEXT): strap-2/FINAGG.$(FASLEXT) strap-2/SMAGG.$(FASLEXT)
 strap-2/FSAGG.$(FASLEXT): strap-2/KDAGG.$(FASLEXT) \
 	strap-2/SETAGG.$(FASLEXT) strap-2/FINAGG.$(FASLEXT)
 strap-2/ALAGG.$(FASLEXT): strap-2/TBAGG.$(FASLEXT) strap-2/LSAGG.$(FASLEXT)
@@ -996,13 +997,14 @@ strap-2/TBAGG.$(FASLEXT): strap-2/KDAGG.$(FASLEXT)
 strap-2/KDAGG.$(FASLEXT): strap-2/DIAGG.$(FASLEXT) strap-2/IXAGG.$(FASLEXT)
 strap-2/DIAGG.$(FASLEXT): strap-2/DIOPS.$(FASLEXT)
 strap-2/DIOPS.$(FASLEXT): strap-2/BGAGG.$(FASLEXT) strap-2/CLAGG.$(FASLEXT)
-strap-2/BGAGG.$(FASLEXT): strap-2/HOAGG.$(FASLEXT)
+strap-2/SMAGG.$(FASLEXT): strap-2/HOAGG.$(FASLEXT)
+strap-2/BGAGG.$(FASLEXT): strap-2/SMAGG.$(FASLEXT)
 strap-2/STAGG.$(FASLEXT): strap-2/URAGG.$(FASLEXT)
 strap-2/URAGG.$(FASLEXT): strap-2/RCAGG.$(FASLEXT)
 strap-2/RCAGG.$(FASLEXT): strap-2/HOAGG.$(FASLEXT)
-strap-2/ELAGG.$(FASLEXT): strap-2/LNAGG.$(FASLEXT)
+strap-2/ELAGG.$(FASLEXT): strap-2/LNAGG.$(FASLEXT) strap-2/SMAGG.$(FASLEXT)
 strap-2/SRAGG.$(FASLEXT): strap-2/A1AGG.$(FASLEXT)
-strap-2/A1AGG.$(FASLEXT): strap-2/FLAGG.$(FASLEXT)
+strap-2/A1AGG.$(FASLEXT): strap-2/FLAGG.$(FASLEXT) strap-2/SMAGG.$(FASLEXT)
 strap-2/FLAGG.$(FASLEXT): strap-2/LNAGG.$(FASLEXT) strap-2/FINAGG.$(FASLEXT)
 strap-2/FINAGG.$(FASLEXT): strap-2/HOAGG.$(FASLEXT)
 strap-2/LNAGG.$(FASLEXT): strap-2/IXAGG.$(FASLEXT) \
@@ -1365,7 +1367,7 @@ $(OUT)/FLAGG.$(FASLEXT): $(OUT)/BMODULE.$(FASLEXT) $(OUT)/PID.$(FASLEXT) \
 	$(OUT)/DIFFSPC.$(FASLEXT) $(OUT)/FINAGG.$(FASLEXT)
 $(OUT)/A1AGG.$(FASLEXT): $(OUT)/SETCAT.$(FASLEXT) $(OUT)/BOOLE-.$(FASLEXT) \
 	$(OUT)/FLAGG.$(FASLEXT) $(OUT)/LOGIC-.$(FASLEXT) \
-	$(OUT)/ORDTYPE-.$(FASLEXT)
+	$(OUT)/ORDTYPE-.$(FASLEXT) $(OUT)/SMAGG.$(FASLEXT)
 $(OUT)/SRAGG.$(FASLEXT): $(OUT)/A1AGG.$(FASLEXT)
 $(OUT)/STAGG.$(FASLEXT): $(OUT)/URAGG.$(FASLEXT) $(OUT)/LNAGG.$(FASLEXT)
 $(OUT)/LNAGG.$(FASLEXT): $(OUT)/SEGCAT.$(FASLEXT)
@@ -1462,6 +1464,7 @@ $(OUT)/FSAGG.$(FASLEXT): $(OUT)/FINAGG.$(FASLEXT)
 
 $(OUT)/SMAGG.$(FASLEXT): $(OUT)/HOAGG.$(FASLEXT)
 $(OUT)/FINAGG.$(FASLEXT): $(OUT)/HOAGG.$(FASLEXT)
+$(OUT)/ELAGG.$(FASLEXT): $(OUT)/SMAGG.$(FASLEXT)
 
 oa_algebra_layer_0 = \
   AHYP     ATTREG   CFCAT    ELTAB    KOERCE   KONVERT  \
